port dlp-relating features on top of 'upstream'

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -179,6 +179,13 @@ core_sources = \
 	kademlia/routing/RoutingZone.cpp
 
 
+#Dynamic Leecher Protection - Bill Lee
+if ENABLE_DLP
+core_sources += \
+	DLP.cpp
+AM_CPPFLAGS += -DAMULE_DLP
+endif
+
 gui_sources = \
 	amule-gui.cpp \
 	amuleDlg.cpp \
